@@ -6,6 +6,7 @@ Location switcher ajax search not working with accents chars - FIXED
 Best of widget Option added to display reviews in excerpt - ADDED
 Image gallery lightbox popup image stretches problem with some themes - FIXED
 Changed creation of url custom field from varchar 255 to text for longer urls - CHANGED
+Yoast SEO is unable to overwrite the home page meta title - FIXED
 
 v1.5.3
 If tax query has 'relation' set then it will throw WARNING in wp_list_pluck - FIXED
